syntax = "proto3";

package ra2yrproto.game;

message PlayerInfo {
  string name = 1;
  uint32 side = 2;
  uint32 player_count = 3;
  bool is_spectator = 4;
  uint32 spawn_location = 5;
  uint32 ai_difficulty = 6;
  uint32 color = 7;
  uint32 index = 8;
}

message GameSettings {
  string tunnel_address = 1;
  uint32 tunnel_port = 2;
  string map_name = 3;
  uint32 game_speed = 4;
  bool crates = 5;
  bool mcv_redeploy = 6;
  bool multi_engineer = 7;
  bool build_off_ally_conyards = 8;
  bool ra2_mode = 9;
  uint32 start_credits = 10;
  uint32 unit_count = 11;
  uint32 player_index = 12;
  repeated PlayerInfo players = 13;
  uint64 random_seed = 14;
  string game_mode = 15;
  bool short_game = 16;
  bool allies_allowed = 17;
  bool bridge_destroy = 18;
  bool superweapons = 19;
}
